nothing much just tiny nav bar tweeks

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-<section class="page1">
-     
+
     <nav >
         <ul class="navbar section1" >
-            <!-- <a href="#" class="logo">Saai._.</a> --change to GIF logo soon-->
+        <li><a href="#"> <img class="logo" src="./img/logo.png"> </a></li>
         <li><a href="#"><span class="color">Sk</span>ills</a></li>
         <li><a href="#">Pr<span class="color">oj</span>ects</a></li>
         <li><a href="#">Educ<span class="color">at</span>ion</a></li>
         <li><a href="#">Conta<span class="color">ct</span></a></li>
-    </ul><nav>
-   
-    <div class="section1">
+    </ul></nav>
+
+<section class="page1">
+    <div class="section2">
         
         <p class="inline"><span class="saai">SAAI</span><h1 class="inline"> here, <span class="whoyou secondaryfont">&lt; who are you?&gt;</span></h1></p>
         <img class="underline" src="./img/Saaiunderline.png">
