finished up 2nd page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Saai's Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
     
 </head>
@@ -11,8 +11,8 @@
 
 
 <!-- TO DO
-    make nav bar responsive
-    design 2nd page
+    make nav bar and 2ndpage responsive
+    design projects page
     experiment faster ways to produce code -->
 <body>
 
