--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ porshe image reduce size
     
         <div class="teakadai">
             <p>Trial and error, all corners of the internet, <br>Self-directed learning, breaking stuff, fixing stuff, 
-                <br>more trial and error, being the dumbest in the room,<br>
+                <br>more trial and error, finding people smarter than me,<br>
                 even more trial and error,</p>
             
         </div>
