--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ porshe image reduce size
     </div>  
     
         <div class="skills" >
-            <div class="frontendtxt
-            " >
+            <div class="frontendtxt" >
                 <p><span style="color: #68d2ff;">Fr</span>ontend
                     <ul>
                         <li>Javascript <span style="color: rgb(116, 116, 116);">&lt;React.js&gt;</span></li>
@@ -105,7 +104,7 @@ porshe image reduce size
 </section>
 
 
-<section id="page3" class="page3">
+ <section id="page3" class="page3">
     <h1 class="mainfont projectfont">Projects</h1>
         <div class="projects">
             <p >Design & Develop</p>
@@ -124,7 +123,7 @@ porshe image reduce size
         
 
 
-
+<!-- 
 
 <section id="page4" class="page4">
     <h1 class=" mainfont Technicalskills">Education</h1>
@@ -201,7 +200,7 @@ porshe image reduce size
     <p>Thank you for taking the time to view my portfolio.</p>
     <p>© 2024 copyright all rights reserved.</p>
     </div>
-</section>
+</section> -->
 
 
 
