--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ porshe image reduce size
     <div class="contact">
         <p><a  href="https://wa.me/919176363824"><img class="contactimg" src="./img/whatsapplogo.png"> +91 9176363824</a></p>
         <p><a  href="https://github.com/saaieee"> <img class="contactimg" src="./img/githublogo.png"> Github</a></p>
-        <p><a  href="https://www.linkedin.com/in/saaipranav-subramanian-260356217/"> <img class="contactimg" src="./img/linkedinlogo.png"> Linkedin</a></p>
+        <p><a  href="https://www.linkedin.com/in/saaipranav-subramanian-260356217/"> <img class="contactimg" src="./img/projects/linkedinlogo.PNG"> Linkedin</a></p>
     </div>
     <div class="lilaboutme">     
         <h2>Little more about me</h2>
