--- a/projhtmls/baizonn.html
+++ b/projhtmls/baizonn.html
@@ -111,13 +111,13 @@
           <a href="./saai.html"
             ><img class="leftarrow hover2" src="./img/arrow2.svg" alt=""
           /></a>
-          <a href="math.html"
+          <a href="./mobilegame.html"
             ><img class="hover" src="./img/arrow2.svg" alt=""
           /></a>
         </div>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
