--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Redo footer with contact info -->
 <section id="page5" class="page5">
     <div class="available">
     <p>Available for exciting <span style="color: rgb(140, 139, 139); font-size: smaller;">(negotiable) </span>working 
-    <br>and select freelance oppurtunities</p>
+    <br>and freelance oppurtunities</p>
     
     <p>Send me an email or drop a text via whatsapp, i am friendly!</p>
 </div>
