--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Redo footer with contact info -->
             
             <p>For those who want the full scoop,</p><p> take a peek at my resume!</p>
             <div class="button-container">
-                <a href="./docs/resume.docx" download class="button">Resume</a>
+                <a target=_blank href="https://docs.google.com/document/d/1GeWWuA7BAaVlZAnXMJlLnoJ7wD0FAU0FRpDJx_yA7cI/edit?usp=sharing" download class="button">Resume</a>
                 </div>
         </div>
             
